Write "recently deleted account" rows exclusively by PNI